[package]
name = "web"
version = "0.1.0"
authors = ["Pedro Soares <contato@pedrosoares.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gato-core = "0.4"
gato-apache-cgi = "0.4"
gato-simple-router = "0.4"
serde_json = "1.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
bcrypt = "0.8"
chrono = "0.4"
postgres = "0.15"
