[package]
name = "web"
version = "0.1.0"
authors = ["Pedro Soares <contato@pedrosoares.net>"]
edition = "2018"

[dependencies]
gato-core = "0.5"
gato-apache-cgi = "0.5"
gato-simple-router = "0.5"
serde_json = "1.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
bcrypt = "0.8"
chrono = "0.4"
postgres = "0.15"
