[package]
name = "web"
version = "0.1.0"
authors = ["Pedro Soares <contato@pedrosoares.net>"]
edition = "2018"

[dependencies]
gato-core = "0.5"
gato-lambda = "0.5"
gato-apache-cgi = "0.5"
gato-simple-router = "0.5"
gato-stdout-logger = "0.5"
serde_json = "1.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
bcrypt = "0.8"
chrono = "0.4"
postgres = "0.15"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

